--- a/index.html
+++ b/index.html
@@ -77,8 +77,7 @@
         <section class="parallax pi" id="inicio">
 
             <div class="titulo-parallax">
-                <h1>Barbearia</h1>
-                <h3>W.Tom</h3>
+                <h1 class="tituloP">Barbearia W.Tom</h1>
             </div>
 
         </section>
@@ -329,6 +328,7 @@
     <script src="./app.js/desenvolvedor.js"></script>
     <script src="./app.js/sticky.js"></script>
     <script src="./app.js/botaoMobile.js"></script>
+    <script src="./app.js/digitar.js"></script>
 
     <!-- Slick -->
     <script src="./slick/slick/slick.min.js"></script>
