--- a/index.html
+++ b/index.html
@@ -110,14 +110,10 @@
                     <h2 class="titulo-slick01">Tesoura</h2>
                 </div>
             </div>
-
-
-
-
         </section>
 
         <!-- Funcionamento -->
-        <section id="duvida">
+    <!--     <section id="duvida">
             <div class="separador-01"></div>
             <h1 class="table-titulo">Horário de atendimento</h1>
 
@@ -171,7 +167,7 @@
                     </tbody>
                 </table>
             </div>
-        </section>
+        </section> -->
 
         <!-- Contato -->
         <section class="section-contato" id="contato">
