--- a/index.html
+++ b/index.html
@@ -90,30 +90,30 @@
             <!-- Carousek -->
             <div class="responsive container carousel slick-principal">
                 <div>
-                    <img src="./img/barba.png" alt="">
+                    <img class="img-slick" src="./img/barba.png" alt="">
                     <h2 class="titulo-slick01">Barba</h2>
                 </div>
                 <div>
-                    <img src="./img/Cabelo.png" alt="">
+                    <img class="img-slick" src="./img/Cabelo.png" alt="">
                     <h2 class="titulo-slick01">Cabelo</h2>
                 </div>
                 <div>
-                    <img src="./img/Relaxamento.png" alt="">
+                    <img class="img-slick" src="./img/Relaxamento.png" alt="">
                     <h2 class="titulo-slick01">Coloração</h2>
                 </div>
                 <div>
-                    <img src="./img/Sobrancelha.png" alt="">
+                    <img class="img-slick" src="./img/Sobrancelha.png" alt="">
                     <h2 class="titulo-slick01">Sobrancelha</h2>
                 </div>
                 <div>
-                    <img src="./img/tesoura.png" alt="">
+                    <img class="img-slick" src="./img/tesoura.png" alt="">
                     <h2 class="titulo-slick01">Tesoura</h2>
                 </div>
             </div>
         </section>
 
         <!-- Funcionamento -->
-    <!--     <section id="duvida">
+        <section id="duvida">
             <div class="separador-01"></div>
             <h1 class="table-titulo">Horário de atendimento</h1>
 
@@ -167,7 +167,7 @@
                     </tbody>
                 </table>
             </div>
-        </section> -->
+        </section>
 
         <!-- Contato -->
         <section class="section-contato" id="contato">
@@ -332,4 +332,5 @@
 
 
 </body>
+
 </html>
