--- a/index.html
+++ b/index.html
@@ -84,7 +84,9 @@
 
         <!--  SERVIÇOS  -->
         <section class="servicos">
-            <div class="separador-02"></div>
+            <div class="container">
+                <div class="separador-02"></div>
+            </div>
             <h1 class="titulo-slick">Serviços</h1>
 
             <!-- Carousek -->
@@ -114,7 +116,9 @@
 
         <!-- Funcionamento -->
         <section id="duvida">
-            <div class="separador-01"></div>
+            <div class="container">
+                <div class="separador-01"></div>
+            </div>
             <h1 class="table-titulo">Horário de atendimento</h1>
 
             </div>
@@ -250,7 +254,8 @@
             </div>
         </section>
 
-        <div class="separador-03">
+        <div class="container">
+            <div class="separador-03"></div>
         </div>
 
         <div>
