--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
         <nav class="navbar navbar-expand-md container nav-principal">
 
             <a class="container-img-desktop" href="#">
-                <img class="logo-desktop" src="./img/LOGO.png" alt="logo-desktop">
+                <img class="logo-desktop" src="./img/logo/LOGO.png" alt="logo-desktop">
             </a>
             <a class="container-img-mobile" href="#">
-                <img class="logo-mobile" src="./img/LOGO-MOBILE.png" alt="logo-mobile">
+                <img class="logo-mobile" src="./img/logo/LOGO-MOBILE.png" alt="logo-mobile">
             </a>
 
             < <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup">
@@ -92,23 +92,23 @@
             <!-- Carousek -->
             <div class="responsive container carousel slick-principal">
                 <div>
-                    <img class="img-slick" src="./img/barba.png" alt="">
+                    <img class="img-slick" src="./img/servicos/barba.png" alt="">
                     <h2 class="titulo-slick01">Barba</h2>
                 </div>
                 <div>
-                    <img class="img-slick" src="./img/Cabelo.png" alt="">
+                    <img class="img-slick" src="./img/servicos/Cabelo.png" alt="">
                     <h2 class="titulo-slick01">Cabelo</h2>
                 </div>
                 <div>
-                    <img class="img-slick" src="./img/Relaxamento.png" alt="">
+                    <img class="img-slick" src="./img/servicos/Relaxamento.png" alt="">
                     <h2 class="titulo-slick01">Coloração</h2>
                 </div>
                 <div>
-                    <img class="img-slick" src="./img/Sobrancelha.png" alt="">
+                    <img class="img-slick" src="./img/servicos/Sobrancelha.png" alt="">
                     <h2 class="titulo-slick01">Sobrancelha</h2>
                 </div>
                 <div>
-                    <img class="img-slick" src="./img/tesoura.png" alt="">
+                    <img class="img-slick" src="./img/servicos/tesoura.png" alt="">
                     <h2 class="titulo-slick01">Tesoura</h2>
                 </div>
             </div>
@@ -285,9 +285,9 @@
 
             <div class="col-lg-3 col-md-4 col-sm-6 conteudo-2">
                 <h5>siga-nas redes</h5>
-                <a href="#"><img class="rede-social" src="./img/facebook.png" alt="facebook"></a>
-                <a href="#"> <img class="rede-social" src="./img/instagram-esbocado.png" alt="Instagram"></a>
-                <a href="#"><img class="rede-social" src="./img/whatsapp (1).png" alt="whatsapp"></a>
+                <a href="#"><img class="rede-social" src="./img/redes-s/facebook.png" alt="facebook"></a>
+                <a href="#"> <img class="rede-social" src="./img/redes-s/instagram-esbocado.png" alt="Instagram"></a>
+                <a href="#"><img class="rede-social" src="./img/redes-s/whatsapp.png" alt="whatsapp"></a>
             </div>
 
             <div class="col-lg-3 col-md-4 col-sm-6 conteudo-3">
@@ -302,9 +302,9 @@
 
             <div class="col-lg-3 col-md-4 col-sm-6 conteudo-4">
                 <h5>Formas de Pagamento</h5>
-                <img class="img-pagamento" src="img/visa-icon-sm.png" alt="visa">
-                <img class="img-pagamento" src="img/mastercard-icon-sm.png" alt="master card">
-                <img class="img-pagamento" src="img/Cartão_Elo_.png" alt="Cartão Elo">
+                <img class="img-pagamento" src="./img/pagamento/visa-icon-sm.png" alt="visa">
+                <img class="img-pagamento" src="./img/pagamento/mastercard-icon-sm.png" alt="master card">
+                <img class="img-pagamento" src="./img/pagamento/Cartão_Elo_.png" alt="Cartão Elo">
                 <p>Pagamentos em até 2x em parcelas a partir de R$ 30,00.</p>
             </div>
 
