--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
 
                 <div class="collapse navbar-collapse menu-principal" id="navbarNavAltMarkup">
                     <div class="navbar-nav menu-nav">
-                        <a class="nav-item nav-link " href="#inicio">Inicio <span class="sr-only">(current)</span></a>
-                        <a class="nav-item nav-link " href="#servicos">Serviços</a>
-                        <a class="nav-item nav-link " href="#horario">Horário</a>
-                        <a class="nav-item nav-link " href="#contato">Contato</a>
-                        <a class="nav-item nav-link " href="#duvida">Duvida</a>
+                        <a class="nav-item nav-link" href="#inicio">Inicio</a>
+                        <a class="nav-item nav-link" href="#servicos">Serviços</a>
+                        <a class="nav-item nav-link" href="#horario">Horário</a>
+                        <a class="nav-item nav-link" href="#contato">Contato</a>
+                        <a class="nav-item nav-link" href="#duvida">Duvida</a>
                         <div class="iconeBotaoInterno">
                             <div class="iconeRedes">
                                 <a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a>
@@ -176,12 +176,12 @@
         <!-- Contato -->
         <section class="section-contato" id="contato">
             <div class="container">
-                <section class="form-principal">
+                <div class="form-principal">
                     <h1 class="titulo-contato">Contato</h1>
 
                     <div class="d-flex">
 
-                        <section class="p-2 flex-fill animate__animated animate__slideInLeft">
+                        <div class="p-2 flex-fill animate__animated animate__slideInLeft">
                             <h3>
                                 Fale conosco
                             </h3>
@@ -212,9 +212,9 @@
                                 </div>
                                 <input class="botaoEnviar" type="submit">
                             </form>
-                        </section>
+                        </div>
 
-                        <section class="p-2 flex-fill animate__animated animate__slideInUp">
+                        <div class="p-2 flex-fill animate__animated animate__slideInUp">
                             <div class="contato-parte2">
                                 <h3>Contato</h3>
                                 <div>
@@ -246,11 +246,11 @@
                                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d790.9551622547732!2d-38.508189470856095!3d-12.990850192646931!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7160497b6b38db7%3A0xed21c14d78f0aadf!2sRua%20Athayde%20Seixas%2C%2014%20-%20Garcia%2C%20Salvador%20-%20BA%2C%2040100-260!5e1!3m2!1spt-BR!2sbr!4v1596140209810!5m2!1spt-BR!2sbr"
                                 width="100%" height="63%" frameborder="0" style="border:0;" allowfullscreen=""
                                 aria-hidden="false" tabindex="0"></iframe>
-                        </section>
+                        </div>
 
                     </div>
 
-                </section>
+                </div>
             </div>
         </section>
 
@@ -258,11 +258,11 @@
             <div class="separador-03"></div>
         </div>
 
-        <div id="duvida">
+        <section id="duvida" class="teste99">
             <h1>
                 Dúvidaa
             </h1>
-        </div>
+        </section>
 
     </main>
 
@@ -338,6 +338,29 @@
     <script src="./app.js/carousel.js"></script>
 
 
+
+    <script>
+        // Mudar para active o menu de acordo com a área
+        $('section').each(function () {
+            var height = $(this).height(),
+                offsetTop = $(this).offset().top,
+                menuHeight = $('.menu').innerHeight(),
+                id = $(this).attr('id'),
+                $itemMenu = $('a[href="#' + id + '"]');
+
+            $(window).scroll(function () {
+                var scrollTop = $(window).scrollTop();
+
+
+                if (offsetTop - menuHeight - menuHeight < scrollTop && offsetTop + height - menuHeight >
+                    scrollTop) {
+                    $itemMenu.addClass('active');
+                } else {
+                    $itemMenu.removeClass('active');
+                }
+            });
+        });
+    </script>
 
 </body>
 
