--- a/index.html
+++ b/index.html
@@ -73,10 +73,6 @@
     <!-- meio -->
     <main class="main-principal">
 
-        <fieldset>
-            <h1><a href="">a</a></h1>
-        </fieldset>
-
         <!-- Parallax -->
         <section class="parallax pi" id="inicio">
 
@@ -260,14 +256,17 @@
 
 
         <section id="duvida">
-            <h1>hahahahahhahaha</h1>
-            <h1>hahahahahhahaha</h1>
-            <h1>hahahahahhahaha</h1>
-            <h1>hahahahahhahaha</h1>
-            <h1>hahahahahhahaha</h1>
-            <h1>hahahahahhahaha</h1>
-            <h1>hahahahahhahaha</h1>
-            <h1>hahahahahhahaha</h1>
+            <div class="container duvida-seg">
+                <h1>hahahahahhahaha</h1>
+                <h1>hahahahahhahaha</h1>
+                <h1>hahahahahhahaha</h1>
+                <h1>hahahahahhahaha</h1>
+                <h1>hahahahahhahaha</h1>
+                <h1>hahahahahhahaha</h1>
+                <h1>hahahahahhahaha</h1>
+                <h1>hahahahahhahaha</h1>
+            </div>
+
             <div class="separador-03"></div>
         </section>
     </main>
@@ -344,10 +343,10 @@
     <script src="./slick/slick/slick.min.js"></script>
     <script src="./app.js/carousel.js"></script>
 
-     <!-- Mudar para active o menu de acordo com a área -->
+    <!-- Mudar para active o menu de acordo com a área -->
     <script src="./app.js/menuTop.js"></script>
 
-   
+
 </body>
 
 </html>
