--- a/index.html
+++ b/index.html
@@ -171,6 +171,7 @@
                     </tbody>
                 </table>
             </div>
+
         </section>
 
         <!-- Contato -->
@@ -256,20 +257,28 @@
 
 
         <section id="duvida">
-            <div class="container duvida-seg">
-                <h1>hahahahahhahaha</h1>
-                <h1>hahahahahhahaha</h1>
-                <h1>hahahahahhahaha</h1>
-                <h1>hahahahahhahaha</h1>
-                <h1>hahahahahhahaha</h1>
-                <h1>hahahahahhahaha</h1>
-                <h1>hahahahahhahaha</h1>
-                <h1>hahahahahhahaha</h1>
+            <div class="duvida-pri">
+                <div class="container duvida-seg">
+                    <div class="row">
+                        <div class="col-lg-5 col-md-6 ">
+                            <h1>hahahahahhahaha</h1>
+                            <h1>hahahahahhahaha</h1>
+                            <h1>hahahahahhahaha</h1>
+                            <h1>hahahahahhahaha</h1>
+                        </div>
+                        <div class="col-lg-7 col-md-6">
+                            <img class="teste99" src="./img/perfect.png" alt="imagem monitor">
+                        </div>
+                    </div>
+                </div>
             </div>
-
-            <div class="separador-03"></div>
+            <div class="container">
+                <div class="separador-03"></div>
+            </div>>
         </section>
+
     </main>
+   
 
 
     <!-- baixo -->
