--- a/index.html
+++ b/index.html
@@ -258,6 +258,7 @@
 
         <section id="duvida">
             <div class="duvida-pri">
+                <h1 class="titulo-duvida">Dúvida</h1>
                 <div class="container duvida-seg">
                     <div class="row">
                         <div class="col-lg-4 col-md-6 ">
@@ -357,5 +358,4 @@
 
 
 </body>
-
 </html>
