--- a/index.html
+++ b/index.html
@@ -53,15 +53,15 @@
                         <a class="nav-item nav-link" href="#duvida">Duvida</a>
                         <div class="iconeBotaoInterno">
                             <div class="iconeRedes">
-                                <a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+                                <a href="https://www.instagram.com/barbeariaw.tom/?hl=pt-br" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a>
                             </div>
 
                             <div class="iconeRedes">
-                                <a href="#"><i class="fa fa-facebook-official" aria-hidden="true"></i></a>
+                                <a href="https://www.facebook.com/washington.monalisa" target="_black"><i class="fa fa-facebook-official" aria-hidden="true"></i></a>
                             </div>
 
                             <div class="iconeRedes">
-                                <a href="#"><i class="fa fa-whatsapp" aria-hidden="true"></i></a>
+                                <a href="https://api.whatsapp.com/send?phone=5571986938094&text=Seja%20Bem%20Vindo" target="_blank""><i class="fa fa-whatsapp" aria-hidden="true"></i></a>
                             </div>
                         </div>
                     </div>
@@ -81,7 +81,6 @@
             </div>
 
         </section>
-
         <!--  Servicos  -->
         <section id="servicos">
             <div class="container">
@@ -113,7 +112,6 @@
                 </div>
             </div>
         </section>
-
         <!-- horario -->
         <section id="horario">
             <div class="container">
@@ -173,7 +171,6 @@
             </div>
 
         </section>
-
         <!-- Contato -->
         <section class="section-contato" id="contato">
             <div class="container">
@@ -254,33 +251,29 @@
                 </div>
             </div>
         </section>
-
-
-        <section id="duvida">
+        <!-- Duvida -->
+        <section id="duvida" class="animate__animated animate__backInLeft">
             <div class="duvida-pri">
                 <h1 class="titulo-duvida">Dúvida</h1>
                 <div class="container duvida-seg">
                     <div class="row">
                         <div class="col-lg-4 col-md-6 ">
-                            <h1>hahahahahhahaha</h1>
-                            <h1>hahahahahhahaha</h1>
-                            <h1>hahahahahhahaha</h1>
-                            <h1>hahahahahhahaha</h1>
+                            <h2 class="texto-duvida">
+                                Tenha acesso ao nosso Site por qualquer dispositivo Computador Tablet ou Celular
+                            </h2>
                         </div>
                         <div class="col-lg-8 col-md-6">
-                            <img class="teste99" src="./img/perfect.png" alt="imagem monitor">
+                            <img class="img-duvida" src="./img/perfect.png" alt="imagem monitor">
                         </div>
                     </div>
                 </div>
             </div>
             <div class="container">
                 <div class="separador-03"></div>
-            </div>>
+            </div>
         </section>
 
     </main>
-   
-
 
     <!-- baixo -->
     <footer class="footer-principal">
@@ -301,18 +294,22 @@
 
             <div class="col-lg-3 col-md-4 col-sm-6 conteudo-2">
                 <h5>siga-nas redes</h5>
-                <a href="#"><img class="rede-social" src="./img/redes-s/facebook.png" alt="facebook"></a>
-                <a href="#"> <img class="rede-social" src="./img/redes-s/instagram-esbocado.png" alt="Instagram"></a>
-                <a href="#"><img class="rede-social" src="./img/redes-s/whatsapp.png" alt="whatsapp"></a>
+                <a href="https://www.facebook.com/washington.monalisa" target="_blank"><img class="rede-social" src="./img/redes-s/facebook.png" alt="facebook"></a>
+
+                <a href="https://www.instagram.com/barbeariaw.tom/?hl=pt-br" target="_blank"> <img class="rede-social"
+                        src="./img/redes-s/instagram-esbocado.png" alt="Instagram"></a>
+
+                <a href="https://api.whatsapp.com/send?phone=5571986938094&text=Seja%20Bem%20Vindo" target="_blank">
+                    <img class="rede-social" src="./img/redes-s/whatsapp.png" alt="whatsapp"></a>
             </div>
 
             <div class="col-lg-3 col-md-4 col-sm-6 conteudo-3">
                 <h5>informações</h5>
                 <ul>
-                    <li><a href="#">Serviços</a></li>
-                    <li><a href="#">Horário</a></li>
-                    <li><a href="#">Contato</a></li>
-                    <li><a href="#">Duvida</a></li>
+                    <li><a class="inf" href="#">Serviços</a></li>
+                    <li><a class="inf" href="#">Horário</a></li>
+                    <li><a class="inf" href="#">Contato</a></li>
+                    <li><a class="inf" href="#">Duvida</a></li>
                 </ul>
             </div>
 
@@ -347,6 +344,7 @@
     <script src="./app.js/botaoMobile.js"></script>
     <script src="./app.js/digitar.js"></script>
     <script src="./app.js/scroll-suave.js"></script>
+    <script src="./app.js/informacoes.js"></script>
 
 
     <!-- Slick -->
@@ -354,8 +352,10 @@
     <script src="./app.js/carousel.js"></script>
 
     <!-- Mudar para active o menu de acordo com a área -->
-    <script src="./app.js/menuTop.js"></script>
+    <!-- <script src="./app.js/menuTop.js"></script> -->
+
 
 
 </body>
+
 </html>
