--- a/index.html
+++ b/index.html
@@ -4,7 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>W.Tom</title>
+    <title>w.tom</title>
+
+    <!-- Favicon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="img/Favicon">
+    <link rel="icon" type="image/png" sizes="32x32" href="img/Favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="img/Favicon/favicon-16x16.png">
+    <link rel="manifest" href="site.webmanifest">
+
 
     <!-- BOOTSTRAP -->
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
@@ -53,15 +60,18 @@
                         <a class="nav-item nav-link" href="#duvida">Duvida</a>
                         <div class="iconeBotaoInterno">
                             <div class="iconeRedes">
-                                <a href="https://www.instagram.com/barbeariaw.tom/?hl=pt-br" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+                                <a href="https://www.instagram.com/barbeariaw.tom/?hl=pt-br" target="_blank"><i
+                                        class="fa fa-instagram" aria-hidden="true"></i></a>
                             </div>
 
                             <div class="iconeRedes">
-                                <a href="https://www.facebook.com/washington.monalisa" target="_black"><i class="fa fa-facebook-official" aria-hidden="true"></i></a>
+                                <a href="https://www.facebook.com/washington.monalisa" target="_black"><i
+                                        class="fa fa-facebook-official" aria-hidden="true"></i></a>
                             </div>
 
                             <div class="iconeRedes">
-                                <a href="https://api.whatsapp.com/send?phone=5571986938094&text=Seja%20Bem%20Vindo" target="_blank""><i class="fa fa-whatsapp" aria-hidden="true"></i></a>
+                                <a href="https://api.whatsapp.com/send?phone=5571986938094&text=Seja%20Bem%20Vindo"
+                                    target="_blank""><i class=" fa fa-whatsapp" aria-hidden="true"></i></a>
                             </div>
                         </div>
                     </div>
@@ -176,9 +186,7 @@
             <div class="container">
                 <div class="form-principal">
                     <h1 class="titulo-contato">Contato</h1>
-
                     <div class="d-flex">
-
                         <div class="p-2 flex-fill animate__animated animate__slideInLeft">
                             <h3>
                                 Fale conosco
@@ -187,7 +195,7 @@
                             <form class="formulario">
                                 <div class="form-group">
                                     <label for="exampleFormControlInput1">Nome (obrigatório)</label>
-                                    <input type="email" class="form-control" id="exampleFormControlInput1"
+                                    <input type="text" class="form-control" id="exampleFormControlInput1"
                                         placeholder="nome">
                                 </div>
 
@@ -199,9 +207,8 @@
 
                                 <div class="form-group">
                                     <label for="exampleFormControlInput1">Assunto</label>
-                                    <input type="email" class="form-control" id="exampleFormControlInput1">
+                                    <input type="text" class="form-control" id="exampleFormControlInput1">
                                 </div>
-
 
                                 <div class="form-group">
                                     <label for="exampleFormControlTextarea1">Menssagem</label>
@@ -211,7 +218,6 @@
                                 <input class="botaoEnviar" type="submit">
                             </form>
                         </div>
-
                         <div class="p-2 flex-fill animate__animated animate__slideInUp">
                             <div class="contato-parte2">
                                 <h3>Contato</h3>
@@ -245,9 +251,7 @@
                                 width="100%" height="63%" frameborder="0" style="border:0;" allowfullscreen=""
                                 aria-hidden="false" tabindex="0"></iframe>
                         </div>
-
                     </div>
-
                 </div>
             </div>
         </section>
@@ -257,7 +261,7 @@
                 <h1 class="titulo-duvida">Dúvida</h1>
                 <div class="container duvida-seg">
                     <div class="row">
-                        <div class="col-lg-4 col-md-6 ">
+                        <div class="col-lg-4 col-md-6 seg-duvida">
                             <h2 class="texto-duvida">
                                 Tenha acesso ao nosso Site por qualquer dispositivo Computador Tablet ou Celular
                             </h2>
@@ -294,7 +298,8 @@
 
             <div class="col-lg-3 col-md-4 col-sm-6 conteudo-2">
                 <h5>siga-nas redes</h5>
-                <a href="https://www.facebook.com/washington.monalisa" target="_blank"><img class="rede-social" src="./img/redes-s/facebook.png" alt="facebook"></a>
+                <a href="https://www.facebook.com/washington.monalisa" target="_blank"><img class="rede-social"
+                        src="./img/redes-s/facebook.png" alt="facebook"></a>
 
                 <a href="https://www.instagram.com/barbeariaw.tom/?hl=pt-br" target="_blank"> <img class="rede-social"
                         src="./img/redes-s/instagram-esbocado.png" alt="Instagram"></a>
@@ -352,7 +357,7 @@
     <script src="./app.js/carousel.js"></script>
 
     <!-- Mudar para active o menu de acordo com a área -->
-    <!-- <script src="./app.js/menuTop.js"></script> -->
+    <script src="./app.js/menuTop.js"></script>
 
 
 
